LPS-78601 - Classic menu jump fix in mobile

--- a/modules/apps/foundation/frontend-theme/frontend-theme-classic/src/css/components/_navbars.scss
+++ b/modules/apps/foundation/frontend-theme/frontend-theme-classic/src/css/components/_navbars.scss
@@ -7,18 +7,18 @@
 	background-color: #FFF;
 	border-bottom: 1px solid $light-color;
 
+	.navbar-blank {
+		@include media-query(null, $screen-xs-max) {
+			margin-top: 2rem;
+		}
+	}
+
 	.portlet-navigation {
 		margin-left: auto;
 	}
 
 	.logo:hover {
 		text-decoration: none;
-	}
-
-	.nav-item {
-		@include media-query(null, $screen-xs-max) {
-			margin-left: 1rem;
-		}
 	}
 
 	.nav-link {
